[gd_scene load_steps=7 format=2]

[ext_resource path="res://content/gamemode/relichunt/Relichunt.gd" type="Script" id=1]
[ext_resource path="res://content/music/ENGINEER Relic Retrieval Layer 1 [intro].ogg" type="AudioStream" id=2]
[ext_resource path="res://content/music/ENGINEER Relic Retrieval Layer 2 [loop].ogg" type="AudioStream" id=3]
[ext_resource path="res://content/music/ENGINEER Relic Retrieval Layer 1 [loop].ogg" type="AudioStream" id=4]
[ext_resource path="res://content/music/LASER Desperation Layer 1 [loop].ogg" type="AudioStream" id=5]
[ext_resource path="res://content/music/LASER Desperation Layer 2 [loop].ogg" type="AudioStream" id=6]

[node name="Relichunt" type="Node"]
script = ExtResource( 1 )

[node name="RelicRetrievalLayer1Intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="RelicRetrievalLayer1Loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[node name="RelicRetrievalLayer2Loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="DesperationLayer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Music"

[node name="DesperationLayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Music"

[node name="MusicTween" type="Tween" parent="."]

[node name="DesperationTween" type="Tween" parent="."]

[node name="ScriptTween" type="Tween" parent="."]

[connection signal="finished" from="RelicRetrievalLayer1Intro" to="." method="_on_RelicRetrievalLayer1Intro_finished"]
